# ImagesAndAlgorithms

./: .gitignore  README.md  ejercicio-3.5.5-cibernetica.cpp
openframeworks/: CMakeLists.txt  openframeworks.kdev4
openframeworks/config/: deps.cmake  ofia.cmake  openframeworks.cmake
openframeworks/config/include_dirs/: utils
openframeworks/examples/: CMakeLists.txt
openframeworks/examples/floatingPointImageExample/: CMakeLists.txt
openframeworks/examples/floatingPointImageExample/include/: OFApp.hpp
openframeworks/examples/floatingPointImageExample/src/: OFApp.cpp  main.cpp
openframeworks/examples/gravity/: CMakeLists.txt
openframeworks/examples/gravity/include/: Color.hpp  GLWidget.hpp  MainWindow.hpp  PaintGravityHelper.hpp  PaintHelper.hpp  PaintHelperInterface.hpp  PaintImageHelper.hpp  Particle.hpp  Velocity.hpp
openframeworks/examples/gravity/src/: Color.cpp  GLWidget.cpp  MainWindow.cpp  PaintGravityHelper.cpp  PaintHelper.cpp  PaintImageHelper.cpp  Particle.cpp  Velocity.cpp  base.cpp  main.cpp
openframeworks/examples/imageSubsectionExample/: CMakeLists.txt
openframeworks/examples/imageSubsectionExample/include/: OFApp.hpp
openframeworks/examples/lutFilterExample/: CMakeLists.txt
openframeworks/examples/sort/: CMakeLists.txt
openframeworks/examples/sort/include/: Color.hpp  (+1 more)
openframeworks/examples/utils/: CMakeLists.txt
openframeworks/include/: OFApp.hpp
openframeworks/src/: OFApp.cpp  main.cpp
processing/: pyImageColors.pyde
python/: gif.py  readGifMain.py
python/Gif/: GifHeader.py  GifImagePart.py  GifReader.py  GifUtils.py
(+13 files in other folders)
